@@ -193,6 +193,8 @@ class OrigDocument : public PrWidget
 	void calc( Widget *base );
 	bool attrChange( Attr &cfg, TVariant prev );
 	bool cntrCmdAttributes( XMLNode *opt, Widget *src = NULL );
+	TVariant vlGet( Attr &a );
+	TVariant objFuncCall_w( const string &id, vector<TVariant> &prms, const string &user, Widget *src = NULL );
 
 	string makeDoc( const string &tmpl, Widget *wdg );
 	void nodeProcess( Widget *wdg, XMLNode *xcur, TValFunc &funcV, TFunction &funcIO, const string &iLang, bool instrDel = false, time_t upTo = 0 );
